@@ -407,6 +407,14 @@ typedef struct
   uint64_t             guid;
 } dc1394camera_id_t;
 
+typedef struct __dc1394camera_list_t
+{
+  uint32_t      num;
+  dc1394camera_id_t    *ids;
+} dc1394camera_list_t;
+
+typedef struct __dc1394_t dc1394_t;
+
 /* Camera structure */
 typedef struct __dc1394_camera
 {
@@ -665,6 +673,19 @@ extern "C" {
 #endif
 
 /***************************************************************************
+     Camera detection functions
+ ***************************************************************************/
+
+dc1394_t* dc1394_new (void);
+void dc1394_free (dc1394_t *dc1394);
+dc1394error_t dc1394_enumerate_cameras(dc1394_t *dc1394, dc1394camera_list_t **list);
+void dc1394_free_camera_list(dc1394camera_list_t *list);
+dc1394camera_t * dc1394_camera_new(dc1394_t *dc1394, uint64_t guid);
+dc1394camera_t * dc1394_camera_new_unit(dc1394_t *dc1394, uint64_t guid, int unit);
+void dc1394_camera_free(dc1394camera_t *camera);
+
+
+/***************************************************************************
      General system functions
  ***************************************************************************/
 
@@ -890,28 +911,6 @@ dc1394error_t dc1394_cleanup_iso_channels_and_bandwidth(dc1394camera_t *camera);
 /* PIO (Parallel Input-Output)*/
 dc1394error_t dc1394_pio_set(dc1394camera_t *camera, uint32_t value);
 dc1394error_t dc1394_pio_get(dc1394camera_t *camera, uint32_t *value);
-
-
-/***************************************************************************
-     New API for camera detection
- ***************************************************************************/
-
-typedef struct __dc1394camera_list_t
-{
-  uint32_t      num;
-  dc1394camera_id_t    *ids;
-} dc1394camera_list_t;
-
-typedef struct __dc1394_t dc1394_t;
-
-dc1394_t* dc1394_new (void);
-void dc1394_free (dc1394_t *dc1394);
-dc1394error_t dc1394_enumerate_cameras(dc1394_t *dc1394, dc1394camera_list_t **list);
-void dc1394_free_camera_list(dc1394camera_list_t *list);
-dc1394camera_t * dc1394_camera_new(dc1394_t *dc1394, uint64_t guid);
-dc1394camera_t * dc1394_camera_new_unit(dc1394_t *dc1394, uint64_t guid,
-    int unit);
-void dc1394_camera_free(dc1394camera_t *camera);
 
 
 
